human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_21.wast
(assert_invalid
  (module (func $type-value-void-vs-num (result i32)
    (loop (result i32) (nop))
  ))
  "type mismatch"
)